Add bib items I have previously used

--- a/References/references.bib
+++ b/References/references.bib
@@ -1,73 +1,228 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
-
-
-%% Created for Neil Taylor at 2014-04-07 22:34:31 +0100 
-
-
-%% Saved with string encoding Unicode (UTF-8) 
-
-
-@string{aij = {Artificial Intelligence}}
-
-
-@book{NumericalRecipes,
-	Annote = {This is my annotation. I can add in comments that are in \textbf{bold} and \em{italics} and then other content.},
-	Author = {Press, W.H. and others},
-	Pages = {349--361},
-	Publisher = {Cambridge University Press Cambridge},
-	Title = {{Numerical recipes in C}},
-	Year = {1992}}
-
-@inproceedings{MarksPaper,
-	Annote = {This paper...},
-	Author = {Mark Neal and Jan Feyereisl and Rosario Rascun\`{a} and Xiaolei Wang},
-	Booktitle = {Proceedings of the 5th International Conference on Artificial Immune Systems},
-	Pages = {349--361},
-	Publisher = {Springer},
-	Title = {{Don't touch me, I'm fine: Robot autonomy using an artificial innate immune system}},
-	Year = {2006}}
-
-@article{HannahsPaper,
-	Annote = {This is my annotation. I should add in a description here.},
-	Author = {Dee, H. M. and Hogg, D. C.},
-	Journal = aij,
-	Pages = {329-342},
-	Title = {Navigational strategies in behaviour modelling},
-	Volume = {173(2)},
-	Year = 2009}
-
-@misc{FailBlog,
-	Annote = {This is my annotation. I should add in a description here.},
-	Author = {Various},
-	Howpublished = {\url{http://www.failblog.org/}},
-	Month = Aug,
-	Note = {Accessed August 2011},
-	Title = {Fail Blog},
-	Year = {2011}}
-
-@misc{kittenpic_ref,
-	Annote = {This is my annotation. I should add in a description here.},
-	Author = {Sylvia Duckworth},
-	Howpublished = {\url{http://www.geograph.org.uk/photo/640959}},
-	Note = {Copyright Sylvia Duckworth and licensed for reuse under a Creative Commons Attribution-Share Alike 2.0 Generic Licence. Accessed August 2011},
-	Title = {{A picture of a kitten at Hellifield Peel}},
-	Year = 2007}
-
-@url{apache_poi,
-	Annote = {This is my annotation. I should add in a description here.},
-	Author = {{Apache Software Foundation}},
-	Date-Modified = {2014-04-07 21:34:28 +0000},
-	Howpublished = {\url{http://poi.apache.org}},
-	Lastchecked = {14 March 2014},
-	Title = {{Apache POI - the Java API for Microsoft Documents}},
-	Year = 2014}
-
-@url{apache_license,
-	Annote = {This is my annotation. I should add in a description here.},
-	Author = {{Apache Software Foundation}},
-	Date-Modified = {2014-04-07 21:32:45 +0000},
-	Howpublished = {\url{http://www.apache.org/licenses/LICENSE-2.0}},
-	Lastchecked = {14 March 2014},
-	Title = {{Apache License, Version 2.0}},
-	Year = 2004}
+@misc{FOWLER-SCOUT,
+	author = {Martin Fowler},
+	title = {Opportunistic Refactoring},
+	howpublished = {\url{http://martinfowler.com/bliki/OpportunisticRefactoring.html}},
+	month = {},
+	year = {},
+	note = {(Visited on 12015-11-22)}
+}
+@misc{FOWLER-DESIGN,
+	author = {Martin Fowler},
+	title = {Is Design Dead?},
+	howpublished = {\url{http://martinfowler.com/articles/designDead.html}},
+	month = {},
+	year = {},
+	note = {(Visited on 2015-11-22)}
+}
+@misc{XP,
+	author = {Don Wells},
+	title = {Extreme Programming: A Gentle Introduction.},
+	howpublished = {\url{http://www.extremeprogramming.org/}},
+	month = {},
+	year = {},
+	note = {(Visited on 2015-11-22)}
+}
+@book{CLEAN,
+	Author = {Robert C. Martin},
+	Title = {Clean Code: A Handbook of Agile Software Craftsmanship},
+	Publisher = {Prentice Hall},
+	Year = {2008},
+	ISBN = {0132350882},
+	URL = {http://www.amazon.com/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882}
+}
+@article{HOARE-CSP,
+	author = {Hoare, C. A. R.},
+	title = {Communicating Sequential Processes},
+	journal = {Commun. ACM},
+	issue_date = {Aug. 1978},
+	volume = {21},
+	number = {8},
+	month = aug,
+	year = {1978},
+	issn = {0001-0782},
+	pages = {666--677},
+	numpages = {12},
+	url = {http://doi.acm.org/10.1145/359576.359585},
+	doi = {10.1145/359576.359585},
+	acmid = {359585},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {classes, concurrency, conditional critical regions, coroutines, data representations, guarded commands, input, iterative arrays, monitors, multiple entries, multiple exits, nondeterminacy, output, parallel programming, procedures, program structures, programming, programming languages, programming primitives, recursion},
+}
+@misc{GOTOFAIL,
+	author = {Paul Ducklin},
+	title = {Anatomy of a “goto fail” – Apple’s SSL bug explained, plus an unofficial patch for OS X! – Naked Security},
+	howpublished = {\url{https://nakedsecurity.sophos.com/2014/02/24/anatomy-of-a-goto-fail-apples-ssl-bug-explained-plus-an-unofficial-patch/}},
+	month = {24 Feb},
+	year = {2014},
+	note = {(Visited on 02/11/2016)}
+}
+@misc{POSIX-SHELL-STANDARD,
+	author = {},
+	title = {POSIX Shell Specification},
+	howpublished = {\url{http://pubs.opengroup.org/onlinepubs/9699919799/utilities/V3_chap02.html#tag_18_01}},
+	month = {},
+	year = {2001},
+	note = {(Visited on 2016-01-20)},
+	annote = {Almost all of the functionality of the shell should follow this as a guide.}
+}
+@misc{TLDP-BASH-PORTABILITY,
+	author = {},
+	title = {Portability Issues},
+	howpublished = {\url{http://tldp.org/LDP/abs/html/portabilityissues.html}},
+	month = {},
+	year = {},
+	note = {(Visited on 2016-01-20)},
+	annote = {Provides a list of the bash specific features.}
+}
+@misc{GOLANG,
+	author = {The Go Authors},
+	title = {Documentation - The Go Programming Language},
+	howpublished = {\url{https://golang.org/doc/}},
+	month = {},
+	year = {},
+	note = {(Visited on 2016-01-21)},
+	annote = {The Go languages main page.}
+}
+@misc{PIKE-LEXING-VIDEO,
+	author = {Rob Pike},
+	title = {Lexical Scanning in Go - Rob Pike - YouTube},
+	howpublished = {\url{https://www.youtube.com/watch?v=HxaD_trXwRE}},
+	month = {08},
+	year = {2011},
+	note = {(Visited on 2016-01-21)},
+	annote = {Rob Pike, one of the creators of Go talking about hand written lexers in go. One of the techniques I will likely be using I will be using.}
+}
+@misc{GOPHER-LEXING-BLOG,
+	author = {Ben Johnson},
+	title = {Handwritten Parsers \& Lexers in Go},
+	howpublished = {\url{https://blog.gopheracademy.com/advent-2014/parsers-lexers/}},
+	month = {12},
+	year = {2014},
+	note = {(Visited on 2016-01-21)},
+	annote = {An article about lexers and parsers in Go.}
+}
+@misc{TCSH,
+	author = {},
+	title = {TCSH},
+	howpublished = {\url{http://www.tcsh.org/Welcome}},
+	month = {},
+	year = {},
+	note = {(Visited on 2016-01-29)}
+}
+@misc{BASH,
+	author = {},
+	title = {Bash - GNU Project - Free Software Foundation},
+	howpublished = {\url{https://www.gnu.org/software/bash/}},
+	month = {},
+	year = {},
+	note = {(Visited on 2016-01-21)},
+	annote = {The main page for the bash project.}
+}
+@misc{ZSH,
+	author = {Geoff Wing},
+	title = {Zsh},
+	howpublished = {\url{http://www.zsh.org/}},
+	month = {},
+	year = {},
+	note = {(Visited on 2016-01-29)}
+}
+@misc{DASH,
+	author = {},
+	title = {Dash As /bin/sh - Ubuntu Wiki},
+	howpublished = {\url{https://wiki.ubuntu.com/DashAsBinSh}},
+	month = {10},
+	year = {2006},
+	note = {(Visited on 2016-01-21)},
+	annote = {Article about how ubuntu switched its default non interactive shell from bash to dash.}
+}
+@misc{FISH,
+	author = {},
+	title = {Fish Shell},
+	howpublished = {\url{http://fishshell.com/}},
+	month = {},
+	year = {},
+	note = {(Visited on 2016-01-29)}
+}
+@misc{SHELLSHOCK-CVE,
+	author = {},
+	title = {Shellshock - CVE-2014-6271},
+	howpublished = {\url{https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2014-6271}},
+	month = {},
+	year = {},
+	note = {(Visited on 2016-01-29)}
+}
+@misc{HEARTBLEED,
+	author = {},
+	title = {Heartbleed Bug},
+	howpublished = {\url{http://heartbleed.com/}},
+	month = {},
+	year = {},
+	note = {(Visited on 2016-01-29)}
+}
+@misc{BORINGSSL,
+	author = {Google},
+	title = {BoringSSL},
+	howpublished = {\url{https://boringssl.googlesource.com/boringssl/}},
+	month = {},
+	year = {},
+	note = {(Visited on 2016-01-29)}
+}
+@misc{LIBRESSL,
+	author = {OpenBSD Foundation},
+	title = {LibreSSL},
+	howpublished = {\url{http://www.libressl.org/}},
+	month = {},
+	year = {},
+	note = {(Visited on 2016-01-29)}
+}
+@inproceedings{PRATT,
+	title={Top down operator precedence},
+	author={Pratt, Vaughan R},
+	booktitle={Proceedings of the 1st annual ACM SIGACT-SIGPLAN symposium on Principles of programming languages},
+	pages={41--51},
+	year={1973},
+	organization={ACM}
+}
+@Book{UNDERSTANDING-COMPUTATION,
+	author = {Stuart, Tom},
+	title = {Understanding computation},
+	publisher = {O'Reilly},
+	year = {2013},
+	address = {Sebastopol, CA},
+	isbn = {978-1449329273}
+}
+@misc{SHELLSHOCK-SYMANTEC,
+	author = {},
+	title = {ShellShock: All you need to know about the Bash Bug vulnerability},
+	howpublished = {\url{http://www.symantec.com/connect/blogs/shellshock-all-you-need-know-about-bash-bug-vulnerability}},
+	month = {},
+	year = {},
+	note = {(Visited on 2016-03-02)}
+}
+@misc{SHELLSHOCK-LWN,
+	author = {},
+	title = {Bash gets shellshocked [LWN.net]},
+	howpublished = {\url{https://lwn.net/Articles/614218/}},
+	month = {},
+	year = {},
+	note = {(Visited on 2016-03-02)}
+}
+@incollection{CROCKFORD-TDOP,
+	author      = {Douglas Crockford},
+	title       = {Top Down Operator Precedence},
+	editor      = {Andy Oram and Greg Wilson},
+	booktitle   = {Beautiful Code},
+	publisher   = {O'Reilly},
+	year        = {2007},
+	pages       = {129-146},
+	chapter     = {9},
+}
+@misc{XP,
+	author = {Don Wells},
+	title = {Extreme Programming: A Gentle Introduction.},
+	howpublished = {\url{http://www.extremeprogramming.org/}},
+	month = {},
+	year = {},
+	note = {(Visited on 2015-11-22)}
+}
