Update on Overleaf.

--- a/References/references.bib
+++ b/References/references.bib
@@ -14,21 +14,14 @@
 	year = {},
 	note = {(Visited on 2015-11-22)}
 }
-@misc{XP,
-	author = {Don Wells},
-	title = {Extreme Programming: A Gentle Introduction.},
-	howpublished = {\url{http://www.extremeprogramming.org/}},
-	month = {},
-	year = {},
-	note = {(Visited on 2015-11-22)}
-}
+
 @book{CLEAN,
 	Author = {Robert C. Martin},
 	Title = {Clean Code: A Handbook of Agile Software Craftsmanship},
 	Publisher = {Prentice Hall},
 	Year = {2008},
 	ISBN = {0132350882},
-	URL = {http://www.amazon.com/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882}
+	URL = {http://www.amazon.co.uk/dp/0132350882}
 }
 @article{HOARE-CSP,
 	author = {Hoare, C. A. R.},
@@ -47,11 +40,10 @@
 	acmid = {359585},
 	publisher = {ACM},
 	address = {New York, NY, USA},
-	keywords = {classes, concurrency, conditional critical regions, coroutines, data representations, guarded commands, input, iterative arrays, monitors, multiple entries, multiple exits, nondeterminacy, output, parallel programming, procedures, program structures, programming, programming languages, programming primitives, recursion},
 }
 @misc{GOTOFAIL,
 	author = {Paul Ducklin},
-	title = {Anatomy of a “goto fail” – Apple’s SSL bug explained, plus an unofficial patch for OS X! – Naked Security},
+	title = {Anatomy of a “goto fail” – Apple’s SSL bug explained},
 	howpublished = {\url{https://nakedsecurity.sophos.com/2014/02/24/anatomy-of-a-goto-fail-apples-ssl-bug-explained-plus-an-unofficial-patch/}},
 	month = {24 Feb},
 	year = {2014},
@@ -129,12 +121,12 @@
 }
 @misc{DASH,
 	author = {},
-	title = {Dash As /bin/sh - Ubuntu Wiki},
+	title = {Using dash as /bin/sh},
 	howpublished = {\url{https://wiki.ubuntu.com/DashAsBinSh}},
 	month = {10},
 	year = {2006},
 	note = {(Visited on 2016-01-21)},
-	annote = {Article about how ubuntu switched its default non interactive shell from bash to dash.}
+	annote = {Article about how Ubuntu switched its default non interactive shell from bash to dash mainly for boot time speed ups.}
 }
 @misc{FISH,
 	author = {},
@@ -218,11 +210,12 @@
 	pages       = {129-146},
 	chapter     = {9},
 }
-@misc{XP,
-	author = {Don Wells},
-	title = {Extreme Programming: A Gentle Introduction.},
-	howpublished = {\url{http://www.extremeprogramming.org/}},
+@misc{UNIX-SHELL-HISTORY,
+author = {Nikolai Bezroukov},
+	title = {Introduction to the Unix shell history},
+	howpublished  = {\url{http://www.softpanorama.org/People/Shell_giants/introduction.shtml}},
 	month = {},
 	year = {},
-	note = {(Visited on 2015-11-22)}
+	note = {(Accessed on 2016-03-23)}
+	annote = {An opinionated (For csh) look at the progression of shells from the 1st generation (Thompson sh) to the 4th (zsh). }
 }
