--- a/dissertation.tex
+++ b/dissertation.tex
@@ -31,6 +31,8 @@
 % Use the following to selectively exclude chapters
 %\includeonly{cover,abstract,acknowledge,declare,chapter1,chapter2}
 
+\usepackage{graphicsx}
+\graphicspath{{./images/}}
 \begin{document}
 
 % all of the include directives below refer to tex files
