--- a/dissertation.tex
+++ b/dissertation.tex
@@ -31,6 +31,7 @@
 % Use the following to selectively exclude chapters
 %\includeonly{cover,abstract,acknowledge,declare,chapter1,chapter2}
 
+\usepackage{booktabs}
 \usepackage{graphicsx}
 \graphicspath{{./images/}}
 \begin{document}
