Update on Overleaf.

--- a/References/references.bib
+++ b/References/references.bib
@@ -193,6 +193,8 @@
 	pages       = {129-146},
 	chapter     = {9},
 }
+@incollection{RAMSEY-BASH-ARCH,
+	author      = {Chet Ramsey}}
 @misc{UNIX-SHELL-HISTORY,
 	author = {Nikolai Bezroukov},
 	title = {Introduction to the Unix shell history},
