Update on Overleaf.

--- a/References/references.bib
+++ b/References/references.bib
@@ -193,8 +193,14 @@
 	pages       = {129-146},
 	chapter     = {9},
 }
-@incollection{RAMSEY-BASH-ARCH,
-	author      = {Chet Ramsey}}
+@incollection{BASH-ARCH,
+	author       = {Chet Ramey},
+    title        = {The Bourne Again Shell},
+    editor       = {Amy Brown & Greg Wilson},
+    booktitle    = {The Architecture of Open Source Applications: Volume 1: Elegance, Evolution and a few Fearless Hacks.},
+    chapter      = {3},
+    howpublished = {\url{http://www.aosabook.org/en/bash.html}},
+}
 @misc{UNIX-SHELL-HISTORY,
 	author = {Nikolai Bezroukov},
 	title = {Introduction to the Unix shell history},
