--- a/References/references.bib
+++ b/References/references.bib
@@ -425,6 +425,10 @@ Network Stack in Go with the CSP Style},
     annote = {A C library that provides go like concurrency.}
 }
 
+@misc{GO-DESIGN-EMAIL.
+	author = {Robert Griesemer},
+    title = {}}
+
 
 
 
