--- a/References/references.bib
+++ b/References/references.bib
@@ -428,7 +428,8 @@ Network Stack in Go with the CSP Style},
 @misc{GO-DESIGN-EMAIL.
 	author = {Robert Griesemer},
     title = {The Evolution of Go},
-    howpublished = {\url{https://talks.golang.org/2015/gophercon-goevolution.slide#8}}
+    howpublished = {\url{https://talks.golang.org/2015/gophercon-goevolution.slide#8}},
+    
     }
 
 
