Update on Overleaf.

--- a/References/references.bib
+++ b/References/references.bib
@@ -425,11 +425,13 @@ Network Stack in Go with the CSP Style},
     annote = {A C library that provides go like concurrency.}
 }
 
-@misc{GO-DESIGN-EMAIL.
+@misc{GO-DESIGN-EMAIL,
 	author = {Robert Griesemer},
     title = {The Evolution of Go},
     howpublished = {\url{https://talks.golang.org/2015/gophercon-goevolution.slide#8}},
-    
+    year = {2015},
+    note = {(Accessed on 2016-04-13},
+    annote = {A presentation form one of the creators of go describing the goals of the language and how it has evolved over the past few years.}
     }
 
 
