Update on Overleaf.

--- a/Appendix3/appendix3.tex
+++ b/Appendix3/appendix3.tex
@@ -1,6 +1,6 @@
 \chapter{Code Examples}
 
-\begin{figure}
+\begin{figure}[hp]
 \label{code:node-interface}
 \begin{lstlisting}[frame=tb]
 type Node interface {
