--- a/Appendix3/appendix3.tex
+++ b/Appendix3/appendix3.tex
@@ -28,7 +28,7 @@ func (n NodeIf) Eval(scp *variables.Scope, ioc *IOContainer) ExitStatus {
 \end{figure}
 
 \begin{figure}[hp]
-\label{code:node-eof-noop}
+\label{code:node-noop}
 \begin{lstlisting}[frame=tb]
 type NodeNoop struct{}
 
