Update on Overleaf.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -38,6 +38,10 @@
 \usepackage[hypcap]{caption}
 \usepackage{hyperref}
 \usepackage{listings}
+\lstset{%
+	tabsize=2,
+    basicstyle=\small
+}
 \usepackage{mdwlist}
 \usepackage{pdfpages}
 \hypersetup{
