--- a/Appendix1/appendix1.tex
+++ b/Appendix1/appendix1.tex
@@ -12,7 +12,6 @@
 %. The library is released using the Apache License 
 %. This library was used without modification. 
 
-\begin{figure}[h]
-\lstlistinginput[frame=tb]{fnmatch.go}
-\caption[The Node Interface]{The Node interface used in the AST. Also shows the NodeIf as an example of implementation. Interfaces are implicitly satisfied if the type has the required methods. \label{lst:node-interface}}
-\end{figure}
+\lstinputlisting[frame=tb]{Appendix1/fnmatch.go}
+\caption[fnmatch]{The Node interface used in the AST. Also shows the NodeIf as an example of implementation. Interfaces are implicitly satisfied if the type has the required methods. \label{lst:fnmatch}}
+
