--- a/dissertation.tex
+++ b/dissertation.tex
@@ -40,7 +40,8 @@
 \usepackage{listings}
 \lstset{%
 	tabsize=2,
-    basicstyle=\small
+    basicstyle=\small,
+    frame=tb
 }
 \usepackage{mdwlist}
 \usepackage{pdfpages}
