Update on Overleaf.

--- a/Appendix3/appendix3.tex
+++ b/Appendix3/appendix3.tex
@@ -63,6 +63,6 @@ func RightShift(a, b int64) int64 {
 	return a / c
 }
 \end{lstlisting}
-\caption[Shift helper functions]{Go's compile time checks prevent using an int64 as an argument to a shift, these functions perform the same math.\label{lst:arith-shift}}
+\caption[Shift helper functions]{Go's compile time checks prevent using an int64 as an argument to a shift.\label{lst:arith-shift}}
 \end{figure}
 
