--- a/Appendix3/appendix3.tex
+++ b/Appendix3/appendix3.tex
@@ -91,3 +91,14 @@ return t
 \caption[Sample of Arithmetic Symbol Lexing]{Portion of the switch statement used to parse symbols. It shows how detection of the next token is possible using just 1 character of lookahead. '<', '<<', '<=' and '<<=' are all covered here.\label{lst:arith-symbol-lex}}
 \end{figure}
 
+
+\begin{figure}[h]
+\begin{lstlisting}[frame=tb]
+type ArithNode interface {
+	nud(*Parser) int64
+	led(int64, *Parser) int64
+	lbp() int
+}
+\end{lstlisting}
+\caption[ArithNode interface]{The interface required by the pratt parser for each node\cite{CROCKFORD-TDOP}. Differs from the examples by the addition of the parser arg to maintain state.\label{lst:arith-node-interface}
+\end{figure}
