--- a/Appendix3/appendix3.tex
+++ b/Appendix3/appendix3.tex
@@ -100,5 +100,6 @@ type ArithNode interface {
 	lbp() int
 }
 \end{lstlisting}
-\caption[ArithNode interface]{The interface required by the pratt parser for each node\cite{CROCKFORD-TDOP}. Differs from the examples by the addition of the parser arg to maintain state.\label{lst:arith-node-interface}
+\caption[ArithNode interface]{The interface required by the pratt parser for each node\cite{CROCKFORD-TDOP}. Differs from the examples by the addition of the parser arg to maintain state.
+\label{lst:arith-node-interface}}
 \end{figure}
