--- a/Appendix3/appendix3.tex
+++ b/Appendix3/appendix3.tex
@@ -103,3 +103,17 @@ type ArithNode interface {
 \caption[ArithNode interface]{The interface required by the pratt parser for each node\cite{CROCKFORD-TDOP}. Differs from the examples by the addition of the parser arg to maintain state.
 \label{lst:arith-node-interface}}
 \end{figure}
+
+
+\begin{figure}[h]
+\begin{lstlisting}[frame=tb]
+foofunc() {
+	foo
+}
+
+true && {false; true} && echo "Reaches here"
+echo "SUXXESS" | { tr X C && echo "Finished transform"} | tee - >/dev/null
+\end{lstlisting}
+\caption[Shell Command Grouping]{The interface required by the pratt parser for each node\cite{CROCKFORD-TDOP}. Differs from the examples by the addition of the parser arg to maintain state.
+\label{lst:arith-node-interface}}
+\end{figure}
